--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dedent": "^1.5.3",
     "firebase": "^11.5.0",
     "next": "15.2.4",
+    "openai": "^4.91.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
